--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,18 +9,18 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.amjedalmousawi.quizapp"
+        applicationId "com.amjedalmousawi.quizflagapp"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
