--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizApp">
-        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        <activity android:name=".ChooseLvlActivity"></activity>
+        <activity android:name=".QuizQuestionsFalg" />
+        <activity android:name=".QuizQuestionsAnimal" />
+        <activity android:name=".QuizQuestionsGrammer" />
+        <activity android:name=".QuizQuestionsCar" />
+        <activity android:name=".ChooseYourQuiz" /> <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-5757320647359935~8685535306"/>
+            android:value="ca-app-pub-5757320647359935~8685535306" />
 
-        <activity android:name=".ResultActivity"
+        <activity
+            android:name=".ResultActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
